WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
228995
CSS keyframed animations don't respect edges in 4 value background-position
https://bugs.webkit.org/show_bug.cgi?id=228995
Summary
CSS keyframed animations don't respect edges in 4 value background-position
Luca Casonato
Reported
2021-08-11 04:47:00 PDT
The following example behaves as expected in Chrome and FF, but behaves incorrectly in Safari: In Firefox and Chrome the Deno logo moves from the top right to the middle. In Safari the logo moves from the top left to the middle. ```html <style> div { background-image: url(
https://deno.land/logo.svg
); background-size: 10px; background-repeat: no-repeat; height: 100px; width: 100px; animation: move 1s; } @keyframes move { from { background-position: right 0 top 0px; } to { background-position: right 50px top 10px; } } </style> <div></div> ```
Attachments
Test case
(398 bytes, text/html)
2021-08-26 11:42 PDT
,
Simon Fraser (smfr)
no flags
Details
Patch
(4.93 KB, patch)
2021-08-26 15:58 PDT
,
Simon Fraser (smfr)
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2021-08-11 12:20:57 PDT
<
rdar://problem/81807407
>
Simon Fraser (smfr)
Comment 2
2021-08-26 11:42:02 PDT
Created
attachment 436541
[details]
Test case
Simon Fraser (smfr)
Comment 3
2021-08-26 12:17:50 PDT
The issue here is that the style that results from the animation does not have m_backgroundXOrigin/m_backgroundYOrigin set in it.
Simon Fraser (smfr)
Comment 4
2021-08-26 15:58:19 PDT
Created
attachment 436581
[details]
Patch
EWS
Comment 5
2021-08-26 20:53:02 PDT
Committed
r281683
(
241033@main
): <
https://commits.webkit.org/241033@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 436581
[details]
.
Arcady Goldmints-Orlov
Comment 6
2021-09-01 08:34:32 PDT
It appears that the test added in this change is flaky, mostly failing (but sometimes passing) on GTK and WPE, and mostly passing (but sometimes failing) on Mac/iOS:
https://results.webkit.org/?suite=layout-tests&test=animations%2Fbackground-position.html
Carlos Alberto Lopez Perez
Comment 7
2021-09-06 09:34:09 PDT
(In reply to Arcady Goldmints-Orlov from
comment #6
)
> It appears that the test added in this change is flaky, mostly failing (but > sometimes passing) on GTK and WPE, and mostly passing (but sometimes > failing) on Mac/iOS: >
https://results.webkit.org/?suite=layout-tests&test=animations%2Fbackground
- > position.html
See
bug 229764
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug