CSS keyframed animations don't respect edges in 4 value background-position https://bugs.webkit.org/show_bug.cgi?id=228995

Reviewed by Darin Adler.

For some background-position animations we'd fail to set backgroundOriginX/Y in the
destination style's FillLayer, because this is not set in the destination style initially.

So have FillLayerPositionPropertyWrapper::blend() always set it.

Source/WebCore:

Test: animations/background-position.html

* animation/CSSPropertyAnimation.cpp:

LayoutTests:

* animations/background-position-expected.html: Added.
* animations/background-position.html: Added.


Canonical link: https://commits.webkit.org/241033@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@281683 268f45cc-cd09-0410-ab3c-d52691b4dbfc